fix contrast issues

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -57,19 +57,19 @@
     .cell {
         flex: 1 1 100%;
         margin: 8px 0px;
-        border-left: 1px solid #2f3e46;
-        border-top: 1px solid #2f3e46;
-        border-bottom: 1px solid #2f3e46;
+        border-left: 1px solid #cad2c5;
+        border-top: 1px solid #cad2c5;
+        border-bottom: 1px solid #cad2c5;
     }
 
     .cell:last-child {
-        border-right: 1px solid #2f3e46;
+        border-right: 1px solid #cad2c5;
     }
 
     .day {
         margin: 0 auto;
-        background-color: #2f3e46;
-        color: #84a98c;
+        background-color: #cad2c5;
+        color: #2f3e46;
         text-align: center;
     }
 
